--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: sans-serif !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+}
+
+:root {
+  --purple: #2f49d1;
+  --primaryBlue: #2f49d1;
+  --lightPurple: #eaedfa;
+  --pink: #ffe5e5;
+  --white: #fff;
+  --lightGray: #e5e5e5;
+  --bgGray: #f5f5f5;
+  --dullGray: #e3e3e3;
+  --lightgreen: #d3ded6;
+  --grayFont: #898989;
+  --green: #2bc155;
+  --lightBrown: #d8cfcf;
+  --gray: rgba(255, 255, 255, 0.4);
+  --grayFont: #a5a5a5;
+  --skyBlue: #749edc;
+  --lightBlue: #f4f5f7;
+  --offWhite: #f2f2f2;
+  --lightBorder: #f1f1f1;
+  --crossBorder: #98a4b5;
+  --black: #000000;
+  --ratingsRed: #e76060;
+  --grayishBlack: #474747;
+  --silver: #f9f9fc;
+  --statusFont: #b1b1b1;
+  --red: #f82525;
+  --redButton: #ee3030;
+  --green: #2bc155;
+  --orange: #ff9548;
+  --headerHeight: 5%;
+}
+
+.app__container {
+  background: #f4f5f7 !important;
 }
